update page